# CurationGym

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml
configs/budgets/: default.yaml
configs/decontam/: targets.yaml
configs/dedup/: minhash.yaml
configs/evals/: text_eval_suite.yaml
configs/filters/url_blocklists/: adult.txt
configs/quality/: heuristic_pack.yaml
configs/slices/: default_taxonomy.yaml
demo/: README.md  run_demo.py
demo/output/: demo_report.md  demo_results.json
docs/: attribution_spec.md  charter.md  decontam_audit_format.md  decontam_threat_model.md  metadata_schema.md  optimization_formulation.md  run_artifact_layout.md
schemas/: dataset_manifest.schema.json  policy.schema.json
scripts/: run_local_pipeline.sh
src/curationgym/: __init__.py  cli.py  profiling.py  recovery.py
src/curationgym/attribution/: __init__.py  ablation.py  composition.py  ridge.py  sanity_checks.py
src/curationgym/cache/: __init__.py  feature_cache.py
src/curationgym/core/: __init__.py  document.py  manifest.py
src/curationgym/eval/: __init__.py  aggregate.py  aggregators.py  runner.py
src/curationgym/io/: __init__.py  commoncrawl_reader.py  hf_reader.py
src/curationgym/logging/: __init__.py  run_logger.py
src/curationgym/mixing/: __init__.py  sampler.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_decontam.py  test_dedup.py  test_document.py  test_manifest.py  test_pipeline_builder.py  test_policy.py  test_slices.py
(+58 files in other folders)
